--- a/Pages/Weather.razor
+++ b/Pages/Weather.razor
@@ -4,7 +4,7 @@
 @using System.Globalization
 @inject HttpClient Client;
 
-<h3>Weather App - Ander</h3>
+<h3>Weather App</h3>
 
 <div class="input-group mb-3 mt-3">
     <input class="form-control" type="text" @bind=city placeholder="City name"/>
