--- a/Pages/Weather.razor
+++ b/Pages/Weather.razor
@@ -6,6 +6,10 @@
 
 <h3>Weather App</h3>
 
+<p>Primera rama</p>
+
+<p>Segunda rama</p>
+
 <div class="input-group mb-3 mt-3">
     <input class="form-control" type="text" @bind=city placeholder="City name"/>
     <div>
